fix(filelist): Shift in header after adding share status column

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -157,8 +157,8 @@ column-width-thumbnail-bigger = 7rem
 .fil-content-header-action
     display flex
     justify-content flex-end
-    flex 1
-    width 4.8rem
+    flex-shrink 0
+    width 3.8rem
     padding-right .8rem
     margin-right 2rem
 
